--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -15,7 +15,7 @@ $content-box-height: 70vh;
 $content-box-width: 85%;
 $content-box-max-height: 60rem;
 $content-box-padding: 5rem;
-$navbar-height: 5rem;
+$navbar-height: 50px;
 $content-gap: 5rem;
 $max-page-width: 140rem;
 $page-margin-large: 8rem;
