--- a/app/PageComponents/Contact.module.scss
+++ b/app/PageComponents/Contact.module.scss
@@ -11,6 +11,15 @@
       'item1 item2 item3 item4'
       'item1 item2 item5 item5'
       'item1 item2 item5 item5';
+    @include screen-tablet-sm {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(4, 1fr);
+      grid-template-areas:
+        'item1 item1'
+        'item2 item2'
+        'item3 item3'
+        'item4 item5';
+    }
     .gridItem {
       &:nth-child(1n) {
         .gridImage {
