--- a/app/PageComponents/Experience.module.scss
+++ b/app/PageComponents/Experience.module.scss
@@ -4,15 +4,41 @@
   @include sectionInit;
   .contentBox {
     flex-direction: row-reverse;
+    @include screen-tablet-sm {
+      flex-direction: column;
+    }
     .contentGrid {
       grid-template-columns: repeat(5, 1fr);
       grid-template-rows: repeat(2, 1fr);
       grid-template-areas:
         'item1 item1 item1 item2 item2'
         'item3 item3 item4 item4 item4';
+      @include screen-tablet-lg {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-areas:
+          'item1 item1 item2 item2'
+          'item3 item3 item4 item4';
+      }
+      @include screen-tablet-sm {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-areas:
+          'item1'
+          'item2'
+          'item3'
+          'item4';
+      }
       .gridItem {
         .text {
           right: 1.5rem;
+          @include screen-tablet-lg {
+            right: unset;
+            left: 1.5rem;
+            .itemTitle {
+              font-size: 2.2rem;
+              letter-spacing: 0;
+            }
+          }
         }
         &:nth-child(1) {
           grid-area: item1;
