--- a/app/PageComponents/Projects.module.scss
+++ b/app/PageComponents/Projects.module.scss
@@ -8,6 +8,14 @@
     grid-template-areas:
       'item1 item2'
       'item1 item3';
+    @include screen-tablet-lg {
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(3, 1fr);
+      grid-template-areas:
+        'item1'
+        'item2'
+        'item3';
+    }
     .gridItem {
       &:nth-child(1) {
         grid-area: item1;
