--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import 'mixins';
 
 *,
 *::after,
@@ -11,8 +11,13 @@
 
 html,
 body {
+  width: 100vw;
   max-width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  @include screen-tablet-sm {
+    overflow-y: scroll;
+  }
 }
 
 html {
@@ -33,9 +38,54 @@ section {
   margin: auto;
   min-height: fit-content;
   height: calc(100vh - $navbar-height);
+  @include screen-tablet-lg {
+    width: calc(100vw - $page-margin-small * 2);
+  }
+  @include screen-tablet-sm {
+    height: fit-content;
+  }
+  @include screen-mobile-lg {
+    width: calc(100vw - $page-margin-xsmall * 2);
+  }
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+// Responsive root sizing
+@include screen-desktop-md {
+  html {
+    font-size: 55%;
+  }
+}
+@include screen-desktop-sm {
+  html {
+    font-size: 46%;
+  }
+}
+
+@include screen-tablet-lg {
+  html {
+    font-size: 62.5%;
+  }
+}
+
+@include screen-tablet-sm {
+  html {
+    font-size: 54%;
+  }
+}
+
+@include screen-mobile-lg {
+  html {
+    font-size: 50%;
+  }
+}
+
+@include screen-mobile-sm {
+  html {
+    font-size: 42%;
+  }
 }
