firefox inverted background

--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,7 +1,7 @@
 $color-light: #6ce9fb;
 $color-med: #265ecc;
 $color-dark: #1b3d81;
-$color-white: #fff;
+$color-white: #ffffff;
 
 $white-gradient: linear-gradient(
   to bottom,
