--- a/app/PageComponents/AnimatedShape.module.scss
+++ b/app/PageComponents/AnimatedShape.module.scss
@@ -19,9 +19,9 @@
 }
 
 .staticImg {
-  height: 25rem;
   position: relative;
   width: 100%;
+  height: 100%;
   .shape {
     -o-object-fit: contain;
     object-fit: contain;
