--- a/app/PageComponents/AnimatedShape.module.scss
+++ b/app/PageComponents/AnimatedShape.module.scss
@@ -21,7 +21,7 @@
 .staticImg {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 24rem;
   .shape {
     -o-object-fit: contain;
     object-fit: contain;
